--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "streamlit"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
