--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
     
   },
   "devDependencies": {
